[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "moon_phase"
version = "0.1.0"
description = "moon-phase calculator"
authors = [
    { name="Gregory H. Halverson", email="gregory.halverson@gmail.com" }
]
dependencies = [
    "ephem",
    "pyluach",
    "pandas",
    "geocoder",
    "dateparser",
    "timezonefinder",
    "numpy",
    "pytz"
]

[project.optional-dependencies]
dev = [
    "pytest>=6.2.4"
]